k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-microservices
  template:
    metadata:
      labels:
        app: catalog-microservices
    spec:
      containers:
        - name: catalog-microservice
          image: 2741/catalog-microservice:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
