k8s/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.9.2
          ports:
            - containerPort: 5043  # Optional, expose the port Logstash will listen on
          volumeMounts:
            - name: logstash-config-volume
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf  # Make sure this matches the key in your ConfigMap
      volumes:
        - name: logstash-config-volume
          configMap:
            name: logstash-configmap  # Make sure this matches the name of your ConfigMap
