k8s/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: ingress-basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      securityContext:
        fsGroup: 1000 # or another appropriate group
      containers:
        - name: loki
          image: grafana/loki:latest
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
