k8s/zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
          resources:
            requests:
              cpu: "100m" # 100 milliCPU
              memory: "128Mi" # 128 Mebibytes
            limits:
              cpu: "100m" # 500 milliCPU
              memory: "128Mi" # 512 Mebibytes
