k8s/etcd-service.yaml
# etcd-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: etcd-client
spec:
  selector:
    app: etcd-client
  ports:
    - protocol: TCP
      port: 2379
      targetPort: 2379
