k8s/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
spec:
  selector:
    app: logstash
  ports:
    - protocol: UDP
      port: 5043
      targetPort: 5043
