k8s/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: ingress-basic
spec:
  ports:
    - port: 3100
      protocol: TCP
  selector:
    app: loki
