k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-microservice
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/products"
            backend:
              service:
                name: catalog-microservice
                port:
                  number: 80
